--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             align-items: center;
             height: 100vh;
             transition: all 0.3s;
-            background-image: url(./imgs/icon/cal_bg.jpg) ;
+            background-image: url(./imgs/cal_bg.jpg) ;
             background-size: 100%;
         }
 
